--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
-						<li><a href="#one">What I Doteste</a></li>
+						<li><a href="#one">What I Dotes</a></li>
 						<li><a href="#two">Who I Amteste</a></li>
 						<li><a href="#work">My Workteste</a></li>
 						<li><a href="#contact">Contact</a></li>
